@@ -1397,6 +1397,27 @@
   </build>
   <profiles>
     <profile>
+      <id>java13</id>
+      <activation>
+        <jdk>13</jdk>
+      </activation>
+      <properties>
+        <testAdditionalRuntimeArgLine>--illegal-access=permit --add-exports	java.base/sun.nio.ch=ALL-UNNAMED 
+        			--add-exports java.base/jdk.internal.ref=ALL-UNNAMED 
+        			--add-opens java.base/java.lang=ALL-UNNAMED,org.drools.core,spring.core,javassist 
+        			--add-opens java.base/java.lang.reflect=ALL-UNNAMED,spring.core,javassist
+					--add-opens java.base/java.util=ALL-UNNAMED,com.hack23.cia.web,spring.core,javassist 
+					--add-opens com.hack23.cia.service.impl/com.hack23.cia.service.impl.rules=ALL-UNNAMED</testAdditionalRuntimeArgLine>
+        <test.jvm.path>/usr/lib/jvm/jdk-12/bin/java</test.jvm.path>
+        <jdk.src.version>1.8</jdk.src.version>
+        <jdk.target.version>1.8</jdk.target.version>
+        <jdk.src.exclude>**/module-info.java</jdk.src.exclude>
+        <jacoco.version>0.8.3-SNAPSHOT</jacoco.version>
+        <compiler.plugin.version>3.8.0-jboss-2</compiler.plugin.version>
+        <surefire.version>3.0.0-M3</surefire.version>
+      </properties>
+    </profile>
+    <profile>
       <id>java12</id>
       <activation>
         <jdk>12</jdk>
